--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# Custom folders
+logs
+network
+stats
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -14,7 +19,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
